--- a/index.html
+++ b/index.html
@@ -62,36 +62,30 @@
     <h2>Exploring motion manifold of ACT vs DP in terms of multimodality and constraint satisfaction</h2>
     <div class="video-container">
         <div>
-            <video controls>
-                <!-- Placeholder for ACT video -->
-                Your browser does not support the video tag.
-            </video>
+            <video src="figs/act_motion_manifold.mp4" type="video/mp4" controls="controls" class="center"></video>
             <p class="caption">ACT</p>
         </div>
         <div>
-            <video controls>
-                <!-- Placeholder for DP video -->
-                Your browser does not support the video tag.
-            </video>
+            <video src="figs/dp_motion_manifold.mp4" type="video/mp4" controls="controls" class="center"></video>
             <p class="caption">DP</p>
         </div>
     </div>
 
-    <h2>Benchmark different ways of influencing auto-regressive models and diffusion models at test time</h2>
+    <!-- <h2>Benchmark different ways of influencing auto-regressive models and diffusion models at test time</h2> -->
     <!-- Add your content here as needed -->
-
-    <h2>Visualize diffusion dynamics under influence</h2>
+    <!-- <img src='figs/' width="90%" height="auto"> -->
+    <!-- <h2>Visualize diffusion dynamics under influence</h2>
     <div class="grid-container">
         <video controls>
-            <!-- Placeholder for video 1 -->
+            Placeholder for video 1
             Your browser does not support the video tag.
         </video>
         <video controls>
-            <!-- Placeholder for video 2 -->
+            Placeholder for video 2
             Your browser does not support the video tag.
         </video>
         <video controls>
-            <!-- Placeholder for video 3 -->
+            Placeholder for video 3
             Your browser does not support the video tag.
         </video>
     </div>
@@ -105,7 +99,7 @@
             <img src="placeholder2.jpg" alt="Interaction improves alignment at the cost of constraint violation">
             <p class="caption">Interaction improves alignment at the cost of constraint violation</p>
         </div>
-    </div>
+    </div> -->
 
     <h2>Sample visualization of using drawings to influence policy rollouts</h2>
     <div class="grid-container">
