--- a/index.html
+++ b/index.html
@@ -536,6 +536,33 @@
             </table>
         </div><br>
 
+        <div style='text-align: justify; width: 90%; font-size: 15pt; color:#A31F34'>
+            Real-World Kitchen Task - Discrete Ordering Alignment
+            <p></p>
+        </div>
+        <div>
+            Visualizing the learned motion manifold of pre-trained <strong>DP</strong> shows multimodality only at limited parts of the state space. We show <strong>OP</strong> can improve alignment with physical corrections but suffers from covariate shift and thus grasp failures. Meanwhile, it is hard to tune guide ratio for point input with <strong>GD</strong>. While small guide ratio does not change the policy output, large guide ratio can lead to OOD incoherent plans. The best steering strategy is <strong>SS</strong> with point input that generates aligned plans close to user input while maintaining the original motion manifold. <p></p>
+        </div>
+        
+        <div class="container" style="width: 100%; margin: 0 auto;">
+            <div id="results-carousel" class="carousel results-carousel" style="width: 100%; margin: 0 auto;">
+                <div class="item item-steve">
+                    <video src="figs/kitchen_video_1.mp4" type="video/mp4" controls="controls" class="center">
+                </div>
+                <div class="item item-steve">
+                    <video src="figs/kitchen_video_2.mp4" type="video/mp4" controls="controls" class="center">
+                </div>
+                <div class="item item-steve">
+                    <video src="figs/kitchen_video_3.mp4" type="video/mp4" controls="controls" class="center">
+                </div>
+                <div class="item item-steve">
+                    <video src="figs/kitchen_video_4.mp4" type="video/mp4" controls="controls" class="center">
+                </div>
+                <div class="item item-steve">
+                    <video src="figs/kitchen_video_5.mp4" type="video/mp4" controls="controls" class="center">
+                </div>
+            </div>
+        </div><br>
     </div><br>
 
 
