fix conflict between innate css container class and bulma.min.css container

--- a/index.html
+++ b/index.html
@@ -35,16 +35,10 @@
     <!-- for carousel of results to work -->
     <link rel="stylesheet" href="./static/css/bulma.min.css">
     <link rel="stylesheet" href="./static/css/bulma-carousel.min.css">
-    <link rel="stylesheet" href="./static/css/bulma-slider.min.css">
-    <link rel="stylesheet" href="./static/css/fontawesome.all.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
     <link rel="stylesheet" href="./static/css/index.css">
-    <!-- <link rel="icon" href="./static/images/favicon.svg"> -->
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script defer src="./static/js/fontawesome.all.min.js"></script>
+    <script src="./static/js/jquery.min.js"></script>
     <script src="./static/js/bulma-carousel.min.js"></script>
-    <script src="./static/js/bulma-slider.min.js"></script>
     <script src="./static/js/index.js"></script>
 
 </head>
@@ -148,8 +142,7 @@
 
         
     <div class="container">
-        <div align="center">
-            <video src="figs/itps_teaser_final_small.mp4" type="video/mp4" controls="controls" class="center">
+            <video src="figs/itps_teaser_final_small.mp4" type="video/mp4" controls class="center">
             </video>
         </div>
     </div><br><br>
